2002-10-22  Cristy  <cristy@mystic.es.dupont.com>
  * Added large file pixel cache support for Windows NT.

2002-10-21  Leonard Rosenthol <leonardr@lazerware.com>
  * PDF coder no longer uses ASCII85 encoding with TIFF for MUCH smaller
    files!
  * Cleaned up a few other things in PDF coder.

2002-10-19  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Updated to Automake 1.7.1.

2002-10-18  Cristy  <cristy@mystic.es.dupont.com>
  * PingBlob() improperly set the length memory of BlobInfo to zero.
  * Fixed Ping() memory leak in PerlMagick.
  * Fixed -map problem in convert/mogrify utilities.
  * Fixed -remote problem with display utility (returns correct error
    status).

2002-10-16  Cristy  <cristy@mystic.es.dupont.com>
  * -border with a single value now produces correct results
    (e.g. -border 10).
  * Added -lat to convert/mogrify (local adaptive thresholding).

2002-10-15  Cristy  <cristy@mystic.es.dupont.com>
  * Set locale type LC_NUMERIC to "C".
  * Bug fix for PS2 encoder.
  * Added PS-Adobe preamble to PS3 encoder.

2002-10-14  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick 5.5.1 released.

2002-10-12  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Use ImageMagick release number to allow multiple ImageMagick releases
    to co-exist without interference on the same machine.

2002-10-09  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Decided that DrawGet functions should return by value.

2002-10-06  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * Added detailed logging to BMP, PNG, and JPEG codecs, including JPEG
    quality estimate.

2002-10-01  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Added draw.h "DrawGet" equivalents to most of the "DrawSet" functions.
  * Added an array size argument to DrawSetDashPattern and got rid of
    the zero-termination garbage.
  o Remove 'Set' from the names of draw.h functions which update the
    current affine transformation array (e.g. DrawSetRotate becomes
    DrawRotate).
