@@ -22,6 +22,13 @@
 //
 // #define ProvideDllMain
 
+//
+// Define Windows95 to avoid using functions which are not available
+// under Windows 95.  This reduces the maximum image size which may
+// be processed.
+//
+// #define Windows95
+
 // Define to use the autotrace library (obtain sources seperately)
 //#define HasAUTOTRACE
 
