@@ -1,3 +1,7 @@
+2002-10-21  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
+  * Added Windows95 define to VisualMagick magick_config.h to
+    disable use of features not available under Windows '95
+
 2002-10-22  Cristy  <cristy@mystic.es.dupont.com>
   * Added large file pixel cache support for Windows NT.
 
